# ImageFunction

./: .gitignore  CMakeLists.txt  README.md  compileCMAKE.bat
libraries/includes/: stb_image_write.h
src/: main.cpp
